# evtmon

./: .gitignore  AUTHORS  Makefile  Makefile.am  README.md  autogen.sh  configure.ac  install_dep.sh
.github/workflows/: c-cpp.yml  codeql-analysis.yml
config/: evtmond.json
src/: config.h  dconfig.cpp  dconfig.h  evt_monitor.h  evtmon_config.cpp  evtmon_config.h  evtmond.cpp  evtmond.h  evtmond.json  global.h  intf_evt_monitor.cpp  intf_evt_monitor.h  logger.cpp  logger.h  monitor_intf.h  net_interface.cpp  net_interface.h  netevtmond.cpp  netevtmond.h  netevtmond.json  netintfmon.h  utils.h
src/collectors/collecttofile/: collecttofile.cpp  collecttofile.h
src/common/: event.cpp  event.h  event_queue.cpp  event_queue.h  evt_collector.cpp  evt_collector.h  evt_monitor.cpp  evt_monitor.h  logger.h  utils.h
src/common/.deps/: evtmond-evt_monitor.Po  evtmond-logger.Po  evtmond-net_interface.Po
src/monitors/netintfmon/: intf_evt_monitor.cpp  intf_evt_monitor.h  net_interface.cpp  net_interface.h  netintfmon.cpp  netintfmon.h  netlink_socket.cpp  netlink_socket.h
src/monitors/netintfmon/.deps/: evtmond-intf_evt_monitor.Po
